add Code component

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -11847,6 +11847,16 @@ video {
   transition-delay: 1000ms;
 }
 
+@keyframes spin {
+  from {
+    transform:rotate(0deg);
+  }
+
+  to {
+    transform:rotate(360deg);
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:space-y-0 > :not(template) ~ :not(template) {
     --space-y-reverse: 0;
