--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -3,3 +3,8 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@keyframes spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
+  }
