--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -12049,6 +12049,15 @@ video {
   }
 }
 
+.swatches-picker > div {
+  position: absolute;
+  width: 100%;
+  height: 15rem !important;
+  background-color: #000000 !important;
+  z-index: 9999 !important;
+  border: 1px solid #181a1f;
+}
+
 @media (min-width: 640px) {
   .sm\:space-y-0 > :not(template) ~ :not(template) {
     --space-y-reverse: 0 !important;
